18046
Array('a, 'b)(1)  should return 'b but failed compile

error: 
<console>:8: error: type mismatch;
 found   : Int(1)
 required: scala.reflect.ClassTag[Symbol]
              Array('a, 'b)(1)
                            ^
